Start Bach.java 2-ea development